added ARM templates and PS script

--- a/AzTodo/appsettings.json
+++ b/AzTodo/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
 	"ConnectionStrings": {
-		"DefaultConnection": "Data Source=(local);Initial Catalog=AzTodo;Integrated Security=False;User Id=[user];Password=[password];MultipleActiveResultSets=True"
+		"DefaultConnection": "Data Source=tcp:[Db_Endpoint],1433;Initial Catalog=AzTodo;Integrated Security=False;User Id=aztodosqluser;Password=[Db_Password];MultipleActiveResultSets=True"
 	},
 	"Logging": {
 		"IncludeScopes": false,
